replace `.get(size() - 1)` with `.getLast()` in formatter and refactoring logic